--- a/pom.xml
+++ b/pom.xml
@@ -3,15 +3,14 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.jackoder</groupId>
-	<artifactId>RichTextView</artifactId>
+	<artifactId>RichText</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>apk</packaging>
 	<name>RichTextView</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<platform.version> 4.1.1.4
-			</platform.version>
+		<platform.version>4.1.1.4</platform.version>
 		<android.plugin.version>3.6.0</android.plugin.version>
 	</properties>
 
