--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,12 +8,16 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="16" />
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name">
         <activity android:name=".HelloAndroidActivity" >
+        </activity>
+        <activity android:name=".ListShowActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
